# test-37690-poetry

./: pyproject.toml  renovate.json
