[project]
requires-python = ">=3.9,<4.0.0"
dependencies = [
    "proxmoxer>=2.2.0,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "requests-toolbelt>=1.0.0,<2.0.0",
    "toml>=0.10.2,<0.11.0",
    "typer>=0.16.1,<0.17.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Source code" = "https://gitlab.com/domrim/pve-cli"

[project.scripts]
pve-cli = "pve_cli.main:cli"

[dependency-groups]
bandit = [
    "bandit[toml]>=1.8.6,<2.0.0",
]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pytest-mock>=3.14.1,<4.0.0",
]
mypy = [
    "mypy>=1.17.1,<2.0.0",
    "mypy-gitlab-code-quality>=1.3.0,<2.0.0",
    "types-requests>=2.32.4.20250809,<3.0.0.0",
    "types-toml>=0.10.8.20240310,<0.11.0.0",
]
ruff = [
    "ruff>=0.12.10,<0.13.0",
]

[tool.ruff]
# 80 chars aren't enough in 21 century
line-length = 128

show-fixes = true
fix = false

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "G", "PIE", "T20", "PYI", "PT", "Q", "RET", "SIM", "PTH", "RUF"]
# S101: flake8-bandit forbids asserts
# SIM108: flake8-simplify prefers ternary operators, which are sometimes more complex and not as readable
ignore = ["S101", "SIM108"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
# Use single quotes for non-triple-quoted strings.
quote-style = "single"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "proxmoxer.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".uv-cache"]

[tool.uv]
add-bounds = "major"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
